--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">HiltMVVMComposeTutorial</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_main_screen">MainScreen</string>
+
+    <string name="app_title">Movie World</string>
 </resources>
